--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ boto3==1.28.26
 botocore==1.31.26
 findspark==2.0.1
 jmespath==1.0.1
+numpy==1.25.2
+pandas==2.0.3
 python-dateutil==2.8.2
+pytz==2023.3
 s3transfer==0.6.1
 six==1.16.0
+tzdata==2023.3
 urllib3==1.26.16
