--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ findspark==2.0.1
 jmespath==1.0.1
 numpy==1.25.2
 pandas==2.0.3
+py4j==0.10.9.3
+pyspark==3.2.1
 python-dateutil==2.8.2
 pytz==2023.3
 s3transfer==0.6.1
